--- a/pages/Cursos.html
+++ b/pages/Cursos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 
@@ -40,13 +40,13 @@
                     <h2 class="head-text">Precios de los cursos</h2>
                 </div>
                 <div class="col-lg-4">
-                    <div class="pricing-box pricing-first-box">
+                    <div class="pricing-box">
                         <div class="pricing-first-content">
                             <h3>Plan Basico</h3>
                             <p>1 curso y ayuda de los tutores</p>
                         </div>
                         <div class="pricing-last-content">
-                            <h2><span class="sub">$</span>10<span>dolares</span></h2>
+                            <h2>$10<span>USD</span></h2>
                             <ul>
                                 <li><i class="fas fa-check-circle"></i>Lorem</li>
                                 <li><i class="fas fa-check-circle"></i>Lorem</li>
@@ -63,7 +63,7 @@
                             <p>3 cursos + 1 gratis para un amigo</p>
                         </div>
                         <div class="pricing-last-content">
-                            <h2><span class="sub">$</span>29<span>dolares</span></h2>
+                            <h2>$29<span>USD</span></h2>
                             <ul>
                                 <li><i class="fas fa-check-circle"></i>Lorem</li>
                                 <li><i class="fas fa-check-circle"></i>Lorem</li>
@@ -74,13 +74,13 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="pricing-box pricing-last-box">
+                    <div class="pricing-box">
                         <div class="pricing-first-content">
                             <h3><span class="sub">Plan </span>completo <span></span></h3>
                             <p>Todos los cursos por tiempo limitado</p>
                         </div>
                         <div class="pricing-last-content">
-                            <h2><span class="sub">$</span>89<span>dolares</span></h2>
+                            <h2>$89<span>USD</span></h2>
                             <ul>
                                 <li><i class="fas fa-check-circle"></i>lorem</li>
                                 <li><i class="fas fa-check-circle"></i>lorem</li>
@@ -96,12 +96,12 @@
     </section>
     <!-- Pie de pagina -->
 
-    <footer class="footer2">
+    <footer>
         <div class="container">
             <p>Sciney © 2023 | Todos los derechos reservados</p>
         </div>
-    </footer class="footer2">
-
+    </footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     
 </body>
