--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sciney</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
     <!-- Menu de navegacion y logo "Sciney" -->
 
-    <header id="mi-header">
+    <header>
         <div class="container">
             <p class="logo">Sciney</p>
             <nav>
-                <a href="#">Inicio</a>
+                <a href="../index.html">Inicio</a>
                 <a href="./pages/Nosotros.html">Nosotros</a>
-                <a href="./pages/Cursos.html">Carreras</a>
+                <a href="./pages/Cursos.html">Nuestros Cursos</a>
                 <a href="./pages/Campus.html">Campus Virtual</a>
-                <a href="./pages/Contacto.html">Contacto</a>
+                <a href="#">Contacto</a>
             </nav>
         </div>
     </header>
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="img-container"></div>
             <div class="texto">
-                <h2>Somos <span class="color-acento">Sciney</span></h2>
+                <h2>Somos <span class="accent">Sciney</span></h2>
                 <p>Somos Sciney, una Universidad presencial y virtual dedicada al mundo del cine y sus diversas ramas. Nos enorgullece ser un punto de encuentro para jóvenes con vocación audiovisual, ansias de aprendizaje, investigación y desarrollo constante en el fascinante campo de la cinematografía. Únete a Sciney y sumérgete en el apasionante mundo del cine. Descubre tu potencial, amplía tus horizontes y construye una carrera en la industria cinematográfica. El séptimo arte te espera, y nosotros estaremos a tu lado en cada paso del camino.</p>
             </div>
         </div>
