--- a/pages/Campus.html
+++ b/pages/Campus.html
@@ -8,7 +8,7 @@
     <title>Campus</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
                             <form>
                                 <h3>Ingreso alumnos</h3>
                                 <div class="mb-3">
-                                    <label for="exampleInputEmail1" class="form-label">Usuarioe</label>
+                                    <label for="exampleInputEmail1" class="form-label">Usuario</label>
                                     <input type="text" class="form-control" id="exampleInputEmail1"
                                         aria-describedby="emailHelp">
                                 </div>
@@ -61,11 +61,12 @@
         </div>
     </section>
 
-    <footer class="footer2">
+    <footer>
         <div class="container">
             <p>Sciney © 2023 | Todos los derechos reservados</p>
         </div>
-    </footer class="footer2">
+    </footer>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
