--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 
@@ -15,10 +15,10 @@
             <p class="logo">Sciney</p>
             <nav>
                 <a href="../index.html">Inicio</a>
-                <a href="./Nosotros.html">Nosotros</a>
+                <a href="#">Nosotros</a>
                 <a href="./Cursos.html">Nuestros Cursos</a>
                 <a href="./Campus.html">Campus Virtual</a>
-                <a href="#">Contacto</a>
+                <a href="./Contacto.html">Contacto</a>
             </nav>
         </div>
     </header>
@@ -70,11 +70,13 @@
 
     <!-- Pie de pagina -->
 
-    <footer class="footer2">
+ 
+    <footer>
         <div class="container">
             <p>Sciney © 2023 | Todos los derechos reservados</p>
         </div>
-    </footer class="footer2">
+    </footer>
+    
 
     <!-- Script "de bootstrap" -->
 
