--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     
@@ -32,10 +32,10 @@
         <a href="../pages/Contacto.html">EMPEZAR AHORA!</a>
     </section>
 
-    <section id="somos-sciney2">
+    <section id="somos-sciney">
         <div class="container">
             <div class="img-container"></div> 
-            <h2>Somos <span class="color-acento">Sciney</span></h2>
+            <h2>Somos <span class="accent">Sciney</span></h2>
             <p class="textoparrafo">Somos Sciney, una Universidad presencial y virtual dedicada al mundo del cine y sus diversas ramas. Nos enorgullece ser un punto de encuentro para jóvenes con vocación audiovisual, ansias de aprendizaje, investigación y desarrollo constante en el fascinante campo de la cinematografía. Nos apasiona cada aspecto del cine, desde la dirección de montaje hasta la dirección de cine, pasando por la fotografía, el guion y la animación. Nuestro objetivo es brindar una educación integral y de calidad que nutra las habilidades creativas y técnicas de nuestros estudiantes, preparándolos para triunfar en la industria cinematográfica.</p>
 
             <p>Con un enfoque único, proporcionamos un plan de estudios riguroso y actualizado, impulsando la experimentación y la exploración artística. Creemos firmemente que el cine es un medio poderoso para contar historias y expresar ideas, y buscamos que nuestros estudiantes descubran su propio estilo y voz como cineastas. Aqui te ofrecemos las herramientas y recursos necesarios para adentrarte en el mundo del cine. Ya sea que desees sumergirte en el arte del montaje, dirigir tu propia película, capturar imágenes impresionantes como director de fotografía, escribir guiones emocionantes o dar vida a personajes a través de la animación, encontrarás la orientación y el apoyo adecuados aquí.</p>
@@ -51,49 +51,49 @@
     </section>
 
     <!-- Seccion "Cartas de cursos disponibles" -->
-
-    <section id="nuestros-cursos2">
+    <section id="nuestros-cursos">
         <div class="container">
-        <h2>Nuestras carreras</h2>
-        <div class="programas">
+            <h2>Nuestras carreras</h2>
+            <div class="programas">
             <div class="carreras">
                 <h3>Dirección de Cine</h3>
-                <p>Ofrece la formación general necesaria para concebir la realización cinematográfica en su totalidad. El director será el “ojo” que evalúe todas las áreas comprometidas en la ejecución de un film, y el que ponga en marcha la dinámica del proceso creativo.</p>
-                <button>+ Info</button>
+                <p>Ofrece la formación general necesaria para concebir la realización cinematográfica en su totalidad. Evaluar todas las áreas comprometidas en la ejecución de un film, y poner en marcha la dinámica del proceso creativo.</p>
+                <a href="./pages/Cursos.html">+ Info</a>
             </div>
             <div class="carreras">
                 <h3>Guion Cinematográfico</h3>
-                <p>El pasaje por las diferentes asignaturas debe finalizar con un egresado capacitado para integrarse en la industria audiovisual e ir transitando una búsqueda de su propio estilo que exprese y comunique su particular manera de observar el mundo a través de las historias que cuenta.</p>
-                <button>+ Info</button>
+                <p>Capacitado para integrarse en la industria audiovisual e ir transitando una búsqueda de estilo que exprese y comunique su manera de observar el mundo a través de las historias que cuenta.</p>
+                <a href="./pages/Cursos.html">+ Info</a>
             </div>
             <div class="carreras">
                 <h3>Dirección de Arte Cinematográfico</h3>
-                <p>Desarrolla los conocimientos básicos que requiere un Director de Arte en la realización cinematográfica: puesta en escena, expresividad del vestuario, armonía estética de todos los componentes visuales de la escena y de la historia del arte visual.</p>
-                <button>+ Info</button>
+                <p>Desarrolla los conocimientos básicos que requiere un Director de Arte: puesta en escena, expresividad del vestuario, armonía estética de todos los componentes visuales de la escena</p>
+                <a href="./pages/Cursos.html">+ Info</a>
             </div>
             <div class="carreras">
                 <h3>Especialización en Animacion 3D</h3>
-                <p>Ofrece formacion en la capacidad para desarrollar una produccion con historias y personajes, la realización de efectos visuales e incorporando conocimientos de las nuevas industrias del entretenimiento como los videojuegos y las nuevas formas de comunicación en realidades mixtas.</p>
-                <button>+ Info</button>
+                <p>Ofrece formacion para desarrollar una produccion con historias y personajes, de efectos visuales e incorporando las nuevas formas de comunicación en realidades mixtas.</p>
+                <a href="./pages/Cursos.html">+ Info</a>
             </div>
             <div class="carreras">
                 <h3>Dirección de Montaje</h3>
-                <p>Ofrece formacion en el arte del montaje de imagen y de sonido, aprender el análisis estructural de corto-largometrajes, documentales o de ficción para que sean capaces de intervenir en la coherencia y eficacia del discurso narrativo y dramático.</p>
-                <button>+ Info</button>
+                <p>Ofrece formacion en el arte del montaje de imagen y de sonido, aprender el análisis estructural de largometrajes para ser capaces de intervenir en la coherencia y eficacia del discurso narrativo.</p>
+                <a href="./pages/Cursos.html">+ Info</a>
             </div>
             <div class="carreras">
                 <h3>Dirección de Fotografia</h3>
-                <p>Cubre los conocimientos técnicos esenciales de una de las áreas más importantes de la realización cinematográfica: la fotografía, la iluminación y la cámara.</p>
-                <button>+ Info</button>
+                <p>Cubre los conocimientos técnicos esenciales en las áreas más importantes de la realización cinematográfica: la fotografía, la iluminación y la cámara.</p>
+                <a href="./pages/Cursos.html">+ Info</a>
             </div>
         </div>
         </div>
     </section>
 
     <!-- Seccion "caracteristicas de los cursos/carreras" -->
-
-    <section id="caracteristicas2">
+    <section id="caracteristicas">
         <div class="container">
+            <div class="img-container"></div>
+            <div class="texto">
             <ul>
                 <li>Cursada presencial y online</li>
                 <li>Los mejores profesores</li>
@@ -101,23 +101,23 @@
                 <li>Espacio para formar vinculos y amistades</li>
                 <li>Campus virtual</li>
             </ul>
+            </div>
         </div>
     </section>
-
     <!-- Seccion final "Empezar la cursada" -->
 
-    <section id="final2">
+    <section id="final">
         <h2>¿Listo para aprender?</h2>
-        <button>EMPEZA AHORA!</button>
+        <a href="./pages/Contacto.html">EMPEZÁ AHORA</a>
     </section>
 
     <!-- Pie de pagina -->
 
-    <footer class="footer2">
+    <footer>
         <div class="container">
             <p>Sciney © 2023 | Todos los derechos reservados</p>
         </div>
-    </footer class="footer2">
+    </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
