--- a/pages/Campus.html
+++ b/pages/Campus.html
@@ -63,7 +63,7 @@
 
     <footer>
         <div class="container">
-            <p>Sciney © 2023 | Todos los derechos reservados</p>
+            <p>Sciney © 2023 | Todos los derechos </p>
         </div>
     </footer>
     
