--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -46,7 +46,7 @@
                             <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                         </div>
                         <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Tu email</label>
+                            <label for="exampleInputEmail1" class="form-label">Tu mail</label>
                             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                         </div>
                         <div class="mb-3">
@@ -73,7 +73,7 @@
  
     <footer>
         <div class="container">
-            <p>Sciney © 2023 | Todos los derechos reservados</p>
+            <p>Sciney © 2023 | Todos los derechos </p>
         </div>
     </footer>
     
