--- a/pages/Cursos.html
+++ b/pages/Cursos.html
@@ -48,9 +48,9 @@
                         <div class="pricing-last-content">
                             <h2>$10<span>USD</span></h2>
                             <ul>
-                                <li><i class="fas fa-check-circle"></i>Lorem</li>
-                                <li><i class="fas fa-check-circle"></i>Lorem</li>
-                                <li><i class="fas fa-check-circle"></i>Lorem</li>
+                                <li><i class="fas fa-check-circle"></i>Basico</li>
+                                <li><i class="fas fa-check-circle"></i>Barato</li>
+                                <li><i class="fas fa-check-circle"></i>Soporte</li>
                             </ul>
                             <a href="./Contacto.html" class="custom-btn">Adquirir Plan</a>
                         </div>
@@ -65,9 +65,9 @@
                         <div class="pricing-last-content">
                             <h2>$29<span>USD</span></h2>
                             <ul>
-                                <li><i class="fas fa-check-circle"></i>Lorem</li>
-                                <li><i class="fas fa-check-circle"></i>Lorem</li>
-                                <li><i class="fas fa-check-circle"></i>Lorem</li>
+                                <li><i class="fas fa-check-circle"></i>+Cursos</li>
+                                <li><i class="fas fa-check-circle"></i>Regalo</li>
+                                <li><i class="fas fa-check-circle"></i>Economico</li>
                             </ul>
                             <a href="./Contacto.html" class="custom-btn">Adquirir Plan</a>
                         </div>
@@ -77,14 +77,14 @@
                     <div class="pricing-box">
                         <div class="pricing-first-content">
                             <h3><span class="sub">Plan </span>completo <span></span></h3>
-                            <p>Todos los cursos por tiempo limitado</p>
+                            <p>Todos los cursos por tiempo ilimitado</p>
                         </div>
                         <div class="pricing-last-content">
                             <h2>$89<span>USD</span></h2>
                             <ul>
-                                <li><i class="fas fa-check-circle"></i>lorem</li>
-                                <li><i class="fas fa-check-circle"></i>lorem</li>
-                                <li><i class="fas fa-check-circle"></i>lorem</li>
+                                <li><i class="fas fa-check-circle"></i>+Beneficios</li>
+                                <li><i class="fas fa-check-circle"></i>Tiempo</li>
+                                <li><i class="fas fa-check-circle"></i>Mejor</li>
                             </ul>
                             <a href="./Contacto.html" class="custom-btn">Adquirir Plan</a>
                         </div>
@@ -98,7 +98,7 @@
 
     <footer>
         <div class="container">
-            <p>Sciney © 2023 | Todos los derechos reservados</p>
+            <p>Sciney © 2023 | Todos los derechos </p>
         </div>
     </footer>
     
