--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -95,11 +95,11 @@
             <div class="img-container"></div>
             <div class="texto">
             <ul>
-                <li>Cursada presencial y online</li>
-                <li>Los mejores profesores</li>
-                <li>Asistencia con equipos de grabacion</li>
-                <li>Espacio para formar vinculos y amistades</li>
-                <li>Campus virtual</li>
+                <li><p>Cursada presencial y online </p></li>
+                <li><p>Los mejores profesores</p></li>
+                <li><p>Asistencia con equipos de grabacion</p></li>
+                <li><p>Espacio para formar vinculos y amistades</p></li>
+                <li><p>Campus virtual</p></li>
             </ul>
             </div>
         </div>
@@ -115,7 +115,7 @@
 
     <footer>
         <div class="container">
-            <p>Sciney © 2023 | Todos los derechos reservados</p>
+            <p>Sciney © 2023 | Todos los derechos </p>
         </div>
     </footer>
 
