--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="./pages/Nosotros.html">Nosotros</a>
                 <a href="./pages/Cursos.html">Nuestros Cursos</a>
                 <a href="./pages/Campus.html">Campus Virtual</a>
-                <a href="#">Contacto</a>
+                <a href="./pages/Contacto.html">Contacto</a>
             </nav>
         </div>
     </header>
