Nombre del commit

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <p class="logo">Sciney</p>
             <nav>
-                <a href="../index.html">Inicio</a>
+                <a href="#">Inicio</a>
                 <a href="./pages/Nosotros.html">Nosotros</a>
                 <a href="./pages/Cursos.html">Nuestros Cursos</a>
                 <a href="./pages/Campus.html">Campus Virtual</a>
