Complete css y ordene

--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -32,7 +32,7 @@
         <a href="../pages/Contacto.html">EMPEZAR AHORA!</a>
     </section>
 
-    <section id="somos-sciney">
+    <section id="somos-sciney2">
         <div class="container">
             <div class="img-container"></div> 
             <h2>Somos <span class="accent">Sciney</span></h2>
