--- a/pages/Campus.html
+++ b/pages/Campus.html
@@ -50,7 +50,7 @@
                                     <label for="pass" class="form-label">Clave</label>
                                     <input type="password" class="form-control" id="pass" aria-describedby="emailHelp">
                                 </div>
-                                <div class="" d-grid gap-2">
+                                <div class="d-grid gap-2">
                                     <button type="submit" class="btn btn-primary">Ingresar</button>
                                 </div>
                             </form>
@@ -73,5 +73,4 @@
         crossorigin="anonymous"></script>
 
 </body>
-
 </html>
