--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sciney</title>
+    <title>Sciney © - home</title>
+    <!-- SEO -->
+    <meta name = "description" content="Explora nuestra página de cursos cinematográficos y descubre una amplia variedad de programas de estudio relacionados con la producción audiovisual">
+    <meta name = "keywords" content="cine, estudios cinematográficos, producción audiovisual">
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./media/ds.jpg">
+    <!-- css -->
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
