--- a/pages/Campus.html
+++ b/pages/Campus.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campus</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <title>Sciney © - Campus</title>
+    <!-- SEO -->
+    <meta name = "description" content="Explora nuestro campus virtual para todos esos alumnos que decidieron apostar por su futuro en el cine!">
+    <meta name = "keywords" content="campus virtual, biblioteca, cine, sciney">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- favicon -->
+    <link rel="shortcut icon" href="../media/ds.jpg">
+    <!-- css -->
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-
 <body>
 
     <header>
