--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <title>Sciney © - Contacto</title>
+    <!-- SEO -->
+    <meta name = "description" content="Si quieres recibir mas informacion, contactanos, Sciney te espera!">
+    <meta name = "keywords" content="contacto, cine, mail, telefono">
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- favicon -->
+    <link rel="shortcut icon" href="../media/ds.jpg">
+    <!-- css -->
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
